...
    <string name="search_btn_description">Search</string>
    <string name="back_btn_description">Back</string>

    <string name="undo">Undo</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="confirm">Confirm</string>
    <string name="apply">Apply</string>
    <string name="erase">Erase</string>

    <!-- Profile Fragment -->
    <string name="profile_title">Profile</string>
    <string name="modify_password">Modify password</string>
...
